--- a/contents/docs/functions/event/index.mdx
+++ b/contents/docs/functions/event/index.mdx
@@ -1,13 +1,28 @@
 ---
 title: Event
-description: Functions for managing user input events.
+description: Input event handling
 ---
 
 ---
+
+## New Custom
+<div className="api-card">
+<ApiSig name="new_custom" returns="Event" />
+
+Create a new custom event type.
+
+_**Returns**_
+
+`Event` : The newly registered custom Event.
+
+_**Raises**_
+
+- `RuntimeError` : If registration fails.
+
+</div>
 
 ## Poll
 <div className="api-card">
-
 <ApiSig name="poll" returns="list[Event]" />
 
 Poll for all pending user input events.
@@ -16,81 +31,79 @@ This clears input states and returns a list of events that occurred since the la
 
 _**Returns**_
 
-`list[Event]` : A list of events that have occurred since the last call to `poll()`.
-
-</div>
-
-## New Custom
-<div className="api-card">
-
-<ApiSig name="new_custom" returns="Event" />
-
-Create a new custom event.
-
-_**Returns**_
-
-`Event` : The newly created custom event.
+`list[Event]` : A list of input event objects.
 
 </div>
 
 ## Push
 <div className="api-card">
-
 <ApiSig name="push" params={[{ name: "event", type: "Event" }]} returns="None" />
 
-Push a custom event onto the event queue.
+Push a custom event to the event queue.
 
-_**Parameters**_
+_**Args**_
 
-- `event` : The custom event to push onto the queue.
+- `event` : The custom event to push to the queue.
+
+_**Raises**_
+
+- `ValueError` : If the event is not a custom event type.
+- `RuntimeError` : If the event could not be queued.
 
 </div>
 
 ## Schedule
 <div className="api-card">
+<ApiSig name="schedule" multiline params={[{ name: "event", type: "Event" }, { name: "delay_ms", type: "SupportsInt" }, { name: "repeat", type: "bool", default: "False" }]} returns="None" />
 
-<ApiSig name="schedule" params={[{ name: "event", type: "Event" }, { name: "delay_ms", type: "int" }, { name: "repeat", type: "bool" }]} returns="None" />
+Schedule a custom event to be pushed after a delay. Will overwrite any existing timer for the same event.
 
-Schedule an event to be triggered after a delay.
-Calling this function on the same event again will replace its past schedule.
-
-_**Parameters**_
+_**Args**_
 
 - `event` : The custom event to schedule.
-- `delay_ms` : The delay in milliseconds before the event is triggered.
-- `repeat` : Whether the event should be repeated.
+- `delay_ms` : Delay in milliseconds before the event is pushed.
+- `repeat` : If True, the event will be pushed repeatedly at the
+        specified interval. If False, the event is pushed only once. Defaults to False.
 
-</div>
+_**Raises**_
 
-## Unschedule
-<div className="api-card">
-
-<ApiSig name="unschedule" params={[{ name: "event", type: "Event" }]} returns="None" />
-
-Unschedule a previously scheduled event.
-
-_**Parameters**_
-
-- `event` : The custom event to unschedule.
+- `ValueError` : If the event is not a custom event type.
+- `RuntimeError` : If the timer could not be created.
 
 </div>
 
 ## Start Text Input
 <div className="api-card">
-
 <ApiSig name="start_text_input" returns="None" />
 
-Start text input for `TEXT_INPUT` and `TEXT_EDITING` events.
-Use this to enable receiving text input events from the keyboard.
+Start text input for TEXT_INPUT and TEXT_EDITING events.
+
+_**Raises**_
+
+- `RuntimeError` : If text input could not be started.
 
 </div>
 
 ## Stop Text Input
 <div className="api-card">
-
 <ApiSig name="stop_text_input" returns="None" />
 
-Stop text input for `TEXT_INPUT` and `TEXT_EDITING` events.
-Use this to disable receiving text input events from the keyboard.
+Stop text input for TEXT_INPUT and TEXT_EDITING events.
+
+_**Raises**_
+
+- `RuntimeError` : If text input could not be stopped.
+
+</div>
+
+## Unschedule
+<div className="api-card">
+<ApiSig name="unschedule" params={[{ name: "event", type: "Event" }]} returns="None" />
+
+Cancel a scheduled event timer.
+
+_**Args**_
+
+- `event` : The custom event whose timer should be cancelled.
 
 </div>
