--- a/contents/docs/functions/index.mdx
+++ b/contents/docs/functions/index.mdx
@@ -1,105 +1,107 @@
 ---
 title: Functions
-description: Complete reference for all functions in Kraken Engine.
+description: Complete reference for all function modules in Kraken Engine.
 ---
 
-Comprehensive documentation for all standalone functions available in Kraken Engine. Functions are organized by submodule.
+Comprehensive documentation for all function modules available in Kraken Engine.
 
-## Collision
-Collision detection and intersection testing functions.
+## Modules
+### Collision
+Collision detection functions
 
 [View Collision Functions →](/docs/functions/collision)
 
-## Color
-Color manipulation and conversion utilities.
+### Color
+Color utility functions and predefined color constants.
 
 [View Color Functions →](/docs/functions/color)
 
-## Draw
-Core drawing functions for shapes and primitives.
+### Draw
+Functions for drawing shape objects
 
 [View Draw Functions →](/docs/functions/draw)
 
-## Ease
-Easing functions for smooth animations and transitions.
+### Ease
+Easing functions and animation utilities
 
 [View Ease Functions →](/docs/functions/ease)
 
-## Event
-Event handling and management functions.
+### Event
+Input event handling
 
 [View Event Functions →](/docs/functions/event)
 
-## FX
-Effect functions for use with the Orchestrator class.
+### Fx
+Effect factory functions for Orchestrator
 
-[View FX Functions →](/docs/functions/fx)
+[View Fx Functions →](/docs/functions/fx)
 
-## Gamepad
-Gamepad input detection and management.
+### Gamepad
+Gamepad input handling functions
 
 [View Gamepad Functions →](/docs/functions/gamepad)
 
-## Input
-General input handling functions.
+### Input
+Input handling and action binding
 
 [View Input Functions →](/docs/functions/input)
 
-## Key
-Keyboard input functions.
+### Key
+Keyboard key state checks
 
 [View Key Functions →](/docs/functions/key)
 
-## Line
-Line geometry and intersection functions.
+### Line
+No description available.
 
 [View Line Functions →](/docs/functions/line)
 
-## Log
-Logging and debugging message functions.
+### Log
+Logging utilities
 
 [View Log Functions →](/docs/functions/log)
 
-## Math
-Mathematical utilities and helper functions.
+### Math
+Math related functions
 
 [View Math Functions →](/docs/functions/math)
 
-## Mouse
-Mouse input and position functions.
+### Mouse
+Mouse related functions
 
 [View Mouse Functions →](/docs/functions/mouse)
 
-## Pixel Array
-PixelArray transformation and manipulation functions.
+### Pixel Array
+Functions for manipulating PixelArray objects
 
 [View Pixel Array Functions →](/docs/functions/pixel-array)
 
-## Rect
-Rectangle geometry and collision functions.
+### Rect
+Rectangle related functions
 
 [View Rect Functions →](/docs/functions/rect)
 
-## Renderer
-Core rendering and graphics context functions.
+### Renderer
+Functions for rendering graphics
 
 [View Renderer Functions →](/docs/functions/renderer)
 
-## Time
-Time and delta time management functions.
+### Time
+Time related functions
 
 [View Time Functions →](/docs/functions/time)
 
-## Viewport
-Viewport and screen management functions.
+### Transform
+Functions for transforming pixel arrays
+
+[View Transform Functions →](/docs/functions/transform)
+
+### Viewport
+Viewport management functions
 
 [View Viewport Functions →](/docs/functions/viewport)
 
-## Window
-Window creation and management functions.
+### Window
+Window related functions
 
 [View Window Functions →](/docs/functions/window)
-
----
-
-For object-oriented APIs, see the [Classes](/docs/classes) reference.
