--- a/contents/docs/manual/index.mdx
+++ b/contents/docs/manual/index.mdx
@@ -13,7 +13,7 @@ Understand the difference between keycodes and scancodes for proper keyboard inp
 
 ## Constants
 
-Reference for all constants available in Kraken Engine, including colors, input codes, and configuration values.
+Reference for all constants and enums available in Kraken Engine.
 
 [View Constants →](/docs/manual/constants)
 
